      interface. using Hailo takes 1MB less memory now and loads a
      total of 56 modules instead of 74.

    - Due to the split it was possible to rename the `brain_resource'
      attribute to `brain'. The former is still provided for backwards
      compatibility.

    - A lot of miscellaneous cleanups in the code made possible by
      splitting the core of Hailo from the command line UI.

    - A lot has been changed in the test suite. Below is a partial
      summary:

    - Test the ->run method in Hailo::Command completely. Previously
      only a subset of its functionality was tested. The only thing
      that isn't tested completely is the invocation of
      Hailo::UI::ReadLine via ->run.

    - Test the --help output.

0.25 2010-03-12 17:45:42

    - Improved documentation of the Tokenizer role and the DBD class

    - Added more tests for the ReadLine UI

    - Always run the Test::Script::Run tests

0.24 2010-03-12 01:38:56

    - Repository metadata was wrong due to RT#55136 in
      Dist::Zilla::Plugin::Repository

    - Add some very exhaustive tests for the storage engine. This
      brings our test coverage up to 94.1% up from 92.5%. The tests
      aren't run by default to to the time they take.

    - Capitalize the first word of /^but...no/

0.23 2010-03-11 20:08:27

    - Increase test coverage, coverage is now up to 92.5%

    - Random reply tests were disabled for MySQL for no
      reason. They're now enabled.

    - Rewording the Hailo UPGRADE section

    - Re-arrange the Storage::DBD* code to be more Moosy and use roles
      as they should be used

    - Remove dead test code in Hailo::Test that was used for flat hash
      backends who couldn't generate random replies

    - Test the ->ready() storage method on all backends as part of
      Hailo::Test

    - Test Hailo::stats() on all backends as part of Hailo::Test

    - Test the bin/hailo script directly if Test::Script::Run is
      available.

0.22 2010-03-10 08:46:54
